refactor: change user id request to uid, params name refactoring
