# api/swagger.json
@@ -718,10 +718,10 @@
         "dto.UserCredentials": {
             "type": "object",
             "properties": {
-                "password": {
+                "email": {
                     "type": "string"
                 },
-                "username": {
+                "password": {
                     "type": "string"
                 }
             }
@@ -729,9 +729,6 @@
         "dto.UserUpdate": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
