# internal/dto/user.go
@@ -1,25 +1,25 @@
 package dto
 
 type User struct {
-	Uid   string `json:"uid"`
+	UID   string `json:"uid"`
 	Name  string `json:"name"`
 	Email string `json:"email"`
 	Phone string `json:"phone"`
 }
 
 type UserUpdate struct {
-	Uid   string `json:"-" swaggerignore:"true"`
+	UID   string `json:"-" swaggerignore:"true"`
 	Name  string `json:"name"`
-	Email string `json:"email"`
 	Phone string `json:"phone"`
 }
 
 type UserCreate struct {
 	User
-	Password string `json:"password"`
+	Password  string `json:"password"`
+	OAuthUser bool   `json:"-" swaggerignore:"true"`
 }
 
 type UserCredentials struct {
-	Username string `json:"username,required"`
+	Email    string `json:"email,required"`
 	Password string ` json:"password,required"`
 }
